[package]
name = "reddit_memes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roux = "2.0.0"
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rand = "0.8.5"
reqwest = { version = "0.11" }
regex = "1.5"
actix-files = "0.6.1"